搜索模块的后台实现

--- a/src/main/webapp/route_list.html
+++ b/src/main/webapp/route_list.html
@@ -9,17 +9,26 @@
     <link rel="stylesheet" type="text/css" href="css/common.css">
     <link rel="stylesheet" href="css/search.css">
     <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/getParameter.js"></script>
 
     <script>
-        //获取cid
         $(function () {
-            var search = location.search;
+            /*  var search = location.search;
             //切割字符串，拿到第二个值
-            var cid = search.split("=")[1];
+            var cid = search.split("=")[1];*/
+            //获取cid rname
+            var cid = getParameter("cid");
+            var rname = getParameter("rname");
+            //rname 不为null或“” 解码
+            if (rname){
+                rname = window.decodeURIComponent(rname);
+            }
+            alert(cid);
+            alert(rname);
             //页面加载完成后 调用方法  加载数据
             load(cid);
         })
-        
+
         function load(cid,currentPage) {
             //发送Ajax请求 请求route/pageQuery 传递cid
             $.get("route/pageQuery",{cid:cid,currentPage:currentPage},function (pb) {
@@ -69,7 +78,7 @@
                         li = '<li onclick="javascript:load('+cid+','+i+')"><a href="javascript:void(0)">'+i+'</a></li>';
                     }
                     lis+= li;
-                } 
+                }
 
                 /*//显示所有 页
                 for (var i=1;i <= pb.totalPage;i++){
