--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -1,4 +1,5 @@
 <!-- 头部 start -->
+<script src="js/getParameter.js"></script>
 <script>
     //查询用户名
     $(function () {
@@ -21,6 +22,16 @@
             }
             //加载到HTML页面中
             $("#category").html(lis);
+        })
+    })
+
+    //给搜索绑定单击事件 获取输入框内容
+    $(function () {
+        $("#search-button").click(function () {
+            var rname = $("#search_input").val();
+            var cid = getParameter("cid");
+            //跳转页面 http://localhost/travel/route_list.html?cid=5 并拼接
+            location.href="http://localhost/travel/route_list.html?cid="+cid+"&rname="+rname;
         })
     })
 
@@ -49,8 +60,8 @@
                 <a href="/"><img src="images/logo.jpg" alt=""></a>
             </div>
             <div class="search">
-                <input name="" type="text" placeholder="请输入路线名称" class="search_input" autocomplete="off">
-                <a href="javascript:" class="search-button">搜索</a>
+                <input name="" id="search_input" type="text" placeholder="请输入路线名称" class="search_input" autocomplete="off">
+                <a href="javascript:" id="search-button" class="search-button">搜索</a>
             </div>
             <div class="hottel">
                 <div class="hot_pic">
