--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -25,7 +25,7 @@
         })
     })
 
-    //给搜索绑定单击事件 获取输入框内容
+/*    //给搜索绑定单击事件 获取输入框内容
     $(function () {
         $("#search-button").click(function () {
             var rname = $("#search_input").val();
@@ -33,7 +33,7 @@
             //跳转页面 http://localhost/travel/route_list.html?cid=5 并拼接
             location.href="http://localhost/travel/route_list.html?cid="+cid+"&rname="+rname;
         })
-    })
+    })*/
 
 </script>
 <header id="header">
