--- a/src/main/webapp/route_detail.html
+++ b/src/main/webapp/route_detail.html
@@ -25,7 +25,7 @@
                 <dt>
                     <img alt="" class="big_img" src="http://www.jinmalvyou.com/Public/uploads/goods_img/img_size4/201703/m49788843d72171643297ccc033d9288ee.jpg">
                 </dt>
-                <dd>
+                <dd id="dd">
                     <a class="up_img up_img_disable"></a>
                     <a title="" class="little_img" data-bigpic="http://www.jinmalvyou.com/Public/uploads/goods_img/img_size4/201703/m40920d0669855e745d97f9ad1df966ebb.jpg">
                         <img src="http://www.jinmalvyou.com/Public/uploads/goods_img/img_size2/201703/m20920d0669855e745d97f9ad1df966ebb.jpg">
@@ -58,15 +58,15 @@
                 </dd>
             </dl>
             <div class="prosum_right">
-               <p class="pros_title">【尾单特卖】全国-曼谷6-7天自由行 泰国出境旅游 特价往返机票自由行二次确认</p>
-                <p class="hot">1-2月出发，网付立享￥1099/2人起！爆款位置有限，抢完即止！</p>
+               <p class="pros_title" id="rname">【尾单特卖】全国-曼谷6-7天自由行 泰国出境旅游 特价往返机票自由行二次确认</p>
+                <p class="hot" id="routeIntroduce">1-2月出发，网付立享￥1099/2人起！爆款位置有限，抢完即止！</p>
                 <div class="pros_other">
-                    <p>经营商家  ：黑马国旅</p>
-                    <p>咨询电话 : 400-618-9090</p>
-                    <p>地址 ： 传智播客黑马程序员</p>  
+                    <p>经营商家  ：<span id="sname">黑马国旅</span></p>
+                    <p>咨询电话 : <span id="consphone">400-618-9090</span></p>
+                    <p>地址 ： <span id="address">传智播客黑马程序员</span></p>
                 </div>
                 <div class="pros_price">
-                    <p class="price"><strong>¥2699.00</strong><span>起</span></p>
+                    <p class="price"><strong id="price">¥2699.00</strong><span>起</span></p>
                     <p class="collect">
                         <a class="btn"><i class="glyphicon glyphicon-heart-empty"></i>点击收藏</a>
 
@@ -110,8 +110,15 @@
     <script src="js/bootstrap.min.js"></script>
     <!--导入布局js，共享header和footer-->
     <script type="text/javascript" src="js/include.js"></script>
+    <script src="js/getParameter.js"></script>
     <script>
     $(document).ready(function() {
+        goImg();
+        //自动播放
+        // var timer = setInterval("auto_play()", 5000);
+    });
+
+    function goImg() {
         //焦点图效果
         //点击图片切换图片
         $('.little_img').on('mousemove', function() {
@@ -120,7 +127,7 @@
             $('.big_img').attr('src', big_pic);
             $(this).addClass('cur_img');
         });
-           //上下切换
+        //上下切换
         var picindex = 0;
         var nextindex = 4;
         $('.down_img').on('click',function(){
@@ -141,9 +148,7 @@
                 nextindex = nextindex - 1;
             }
         });
-        //自动播放
-        // var timer = setInterval("auto_play()", 5000);
-    });
+    }
 
     //自动轮播方法
     function auto_play() {
@@ -167,6 +172,42 @@
             $('.big_img').attr('src', big_pic);
         }
     }
+
+    //当页面加载完后 入口函数
+    $(function () {
+        //1获取rid
+        var rid = getParameter("rid");
+        //2发送Ajax请求得到route对象  route/findOne
+        $.get("route/findOne",{rid:rid},function (route) {
+            //3解析json数据 填充html
+            $("#rname").html(route.rname);
+            $("#price").html("￥"+route.price);
+            $("#routeIntroduce").html(route.routeIntroduce);
+            $("#sname").html(route.seller.sname);
+            $("#consphone").html(route.seller.consphone);
+            $("#address").html(route.seller.address);
+
+            //图片展示
+            var ddstr = '<a class="up_img up_img_disable"></a>';
+            for (var i=0;i < route.routeImgList.length;i++){
+                if (i > 4){
+                    var astr = '<a title="" class="little_img" data-bigpic="'+route.routeImgList[i].bigPic+'">\n' +
+                        ' <img src="'+route.routeImgList[i].smallPic+'" style="display:none;">\n' +
+                        '</a>';
+                } else {
+                    var astr = '<a title="" class="little_img" data-bigpic="'+route.routeImgList[i].bigPic+'">\n' +
+                        ' <img src="'+route.routeImgList[i].smallPic+'">\n' +
+                        '</a>';
+                }
+                ddstr += astr;
+            }
+            ddstr += '<a class="down_img down_img_disable" style="margin-bottom: 0;"></a>';
+            $("#dd").html(ddstr);
+            //图片展示和切换代码的调用
+            goImg();
+        })
+    })    
+
     </script>
 </body>
 
